Added missing items

--- a/example-processing.conf
+++ b/example-processing.conf
@@ -20,6 +20,10 @@ espa_min_request_duration_in_seconds = 586
 espa_work_dir = /home/espa/work-dir
 espa_distribution_method = local
 espa_distribution_dir = /home/espa/output-data
+# This turns usage of chattr on or off in the distribution code
+immutable_distribution = off
+
+espa_log_archive = /home/espa/output-data/logs
 espa_schema = /usr/local/espa-product-formatter/schema/espa_internal_metadata_v2_0.xsd
 espa_land_mass_polygon = /usr/local/auxiliaries/land_water_polygon/land_no_buf.ply
 espa_cache_host_list = 'dummyhost1,dummyhost2'
