--- a/centos/science/Dockerfile
+++ b/centos/science/Dockerfile
@@ -1,4 +1,4 @@
-FROM espa.centos.external:2.12.0
+FROM espa/external:2.13.0
 
 
 MAINTAINER USGS EROS LSRD http://eros.usgs.gov
@@ -28,7 +28,7 @@ RUN pip install \
 # ----------------------------------------------------------------------------
 
 RUN REPO_NAME=espa-product-formatter \
-    && REPO_TAG=dev_v1.9.0 \
+    && REPO_TAG=dev_v1.10.0 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -52,7 +52,7 @@ RUN REPO_NAME=espa-spectral-indices \
 
 
 RUN REPO_NAME=espa-cloud-masking \
-    && REPO_TAG=2016_Aug \
+    && REPO_TAG=cfmask-version_2.0.1.1 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -64,7 +64,7 @@ RUN REPO_NAME=espa-cloud-masking \
 
 
 RUN REPO_NAME=espa-surface-water-extent \
-    && REPO_TAG=2016_Aug \
+    && REPO_TAG=dev_espa_v2.13.0 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -76,7 +76,7 @@ RUN REPO_NAME=espa-surface-water-extent \
 
 
 RUN REPO_NAME=espa-surface-reflectance \
-    && REPO_TAG=dev_oct \
+    && REPO_TAG=neednewtag \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -111,7 +111,7 @@ RUN REPO_NAME=espa-elevation \
 
 
 RUN REPO_NAME=espa-processing \
-    && REPO_TAG=dev_v2.12.0 \
+    && REPO_TAG=dev_espa_v2.13.0 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
