updated to newer versions

--- a/centos/science/Dockerfile
+++ b/centos/science/Dockerfile
@@ -39,6 +39,18 @@ RUN REPO_NAME=espa-product-formatter \
     && rm -rf ${REPO_NAME}
 
 
+RUN REPO_NAME=espa-l2qa-tools \
+    && REPO_TAG=dev_v1.1.0 \
+    && cd $SRC_DIR \
+    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
+    && cd ${REPO_NAME} \
+    && git checkout ${REPO_TAG} \
+    && make BUILD_STATIC=yes \
+    && make install \
+    && cd $SRC_DIR \
+    && rm -rf ${REPO_NAME}
+
+
 RUN REPO_NAME=espa-spectral-indices \
     && REPO_TAG=spectral_indices_v2.5.0 \
     && cd $SRC_DIR \
@@ -76,7 +88,7 @@ RUN REPO_NAME=espa-surface-water-extent \
 
 
 RUN REPO_NAME=espa-surface-reflectance \
-    && REPO_TAG=neednewtag \
+    && REPO_TAG=dev_jan2017 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -88,7 +100,7 @@ RUN REPO_NAME=espa-surface-reflectance \
 
 
 RUN REPO_NAME=espa-land-surface-temperature \
-    && REPO_TAG=2016_Aug \
+    && REPO_TAG=2016_Aug-1 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -100,7 +112,7 @@ RUN REPO_NAME=espa-land-surface-temperature \
 
 
 RUN REPO_NAME=espa-elevation \
-    && REPO_TAG=dev_v2.1.0 \
+    && REPO_TAG=dev_v2.2.0 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -109,9 +121,9 @@ RUN REPO_NAME=espa-elevation \
     && cd $SRC_DIR \
     && rm -rf ${REPO_NAME}
 
-
+RUN echo "Release Candidate frog-leggs"
 RUN REPO_NAME=espa-processing \
-    && REPO_TAG=dev_espa_v2.13.0 \
+    && REPO_TAG=dev_espa_2.13.0 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
